test/modules/standard/FileSystem/filerator/bradc/testemptyglob.good
testemptyglob.chpl:18: error: halt reached - glob() iterator zipped with something too big
